# Acupuntura-

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: acupuntura  acupuntura   acupuntura.yml  ci.yml
acupuntura/: asgi.py  settings.py  urls.py  wsgi.py
acupuntura/base/: admin.py  urls.py
acupuntura/base/migrations/: 0001_initial.py
acupuntura/base/static/css/: styles.css
acupuntura/base/static/js/: scripts.js
acupuntura/base/templates/base/: base.html  footer.html  home.html
acupuntura/base/tests/: test_home.py
contrib/: env_sample
github/workflows/: acupuntura
