[tool.poetry]
name = "acupuntura-"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "acupuntura" }
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.5"
flake8 = "^7.3.0"
python-decouple = "^3.8"
dj-database-url = "^3.0.1"
django-storages = "^1.14.6"
collectfast = "^2.2.0"
sentry-sdk = "^2.35.0"
gunicorn = "^23.0.0"
pytest = "^8.4.1"
psycopg = "^3.2.9"
boto3 = "^1.40.21"
psycopg2-binary = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
